# heart

./: .gitignore  README.md  heart_rate_logger.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: build.py  create_intro_ppt.py
site/: index.html
