[project]
name = "heart-rate-band-logger"
version = "0.1.0"
description = "Cross-platform BLE smart band heart-rate logger with a desktop GUI."
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22.3",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.8.0",
]

[tool.ruff]
line-length = 100
